load("//bazel/rules_proto_py:def.bzl", "py_grpc_library")

exports_files(
    ["requirements.txt"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
)

py_grpc_library(
    name = "python",
    srcs = [
        "//tulipsolutions/api/common:errors_proto",
        "//tulipsolutions/api/common:options_proto",
        "//tulipsolutions/api/common:orders_proto",
        "//tulipsolutions/api/priv:message_authentication_proto",
        "//tulipsolutions/api/priv:order_proto",
        "//tulipsolutions/api/priv:trade_proto",
        "//tulipsolutions/api/priv:wallet_proto",
        "//tulipsolutions/api/pub:market_detail_proto",
        "//tulipsolutions/api/pub:ohlc_proto",
        "//tulipsolutions/api/pub:orderbook_proto",
        "//tulipsolutions/api/pub:ticker_proto",
        "//tulipsolutions/api/pub:trade_proto",
    ],
    includes = [":srcs"],
    visibility = ["//visibility:public"],
)
