exports_files(
    ["requirements.txt"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob(["tulipsolutions/**/*.py"]),
    visibility = ["//visibility:public"],
)

py_library(
    name = "auth",
    srcs = [":srcs"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_envoyproxy_protoc_gen_validate//validate:validate_py",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/common:options_py_proto_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/common:orders_py_proto_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:message_authentication_py_proto_library",
    ],
)

py_library(
    name = "python",
    visibility = ["//visibility:public"],
    deps = [
        ":auth",
        "@com_envoyproxy_protoc_gen_validate//validate:validate_py",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/common:errors_py_proto_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/common:options_py_proto_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/common:orders_py_proto_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:message_authentication_py_proto_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:order_py_grpc_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:trade_py_grpc_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:wallet_py_grpc_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:market_detail_py_grpc_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:ohlc_py_grpc_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:orderbook_py_grpc_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:ticker_py_grpc_library",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:trade_py_grpc_library",
    ],
)
