load("@rules_python//python:defs.bzl", "py_binary")
load("@flake8_deps//:requirements.bzl", "requirement")

exports_files(
    [
        "runner.bash.template",
        "requirements.txt",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "flake8",
    srcs = ["flake8_main.py"],
    main = "flake8_main.py",
    python_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("pycodestyle"),
        requirement("pyflakes"),
        requirement("mccabe"),
        requirement("flake8"),
        requirement("entrypoints"),
        requirement("configparser"),
    ],
)
