load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "protodoc",
    srcs = ["protodoc.py"],
    python_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        "@com_envoyproxy_protoc_gen_validate//validate:validate_py",
        "@com_google_protobuf//:protobuf_python",
    ],
)
