load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

filegroup(
    name = "srcs",
    srcs = glob(["*"]),
    visibility = ["//docs:__pkg__"],
)

nodejs_binary(
    name = "docs",
    data = [
        ":srcs",
        "@nl_tulipsolutions_tecl//mockgrpc/src/main/resources",
        "@npm//@tulipsolutions/tecl",
    ],
    entry_point = "index.js",
)
