load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

filegroup(
    name = "srcs",
    srcs = ["index.js"],
    visibility = ["//docs:__pkg__"],
)

nodejs_binary(
    name = "hello_exchange",
    data = [
        ":srcs",
        "@npm//@tulipsolutions/tecl",
    ],
    entry_point = "index.js",
)
