load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

filegroup(
    name = "srcs",
    srcs = glob(["*"]),
    visibility = ["//docs:__pkg__"],
)

# CODEINCLUDE-BEGIN-MARKER: getting-started-bazel-package
nodejs_binary(
    name = "hello_exchange",
    data = [
        "@npm//@tulipsolutions/tecl",
    ],
    entry_point = "index.js",
)
