load("@rules_python//python:defs.bzl", "py_binary")
load("@grpc_python_dependencies//:requirements.bzl", "requirement")

filegroup(
    name = "srcs",
    srcs = glob(["*"]),
    visibility = ["//docs:__pkg__"],
)

py_binary(
    name = "docs",
    srcs = glob(["*.py"]),
    data = ["@nl_tulipsolutions_tecl//mockgrpc/src/main/resources"],
    python_version = "PY3",
    deps = [
        requirement("protobuf"),
        requirement("six"),
        requirement("grpcio"),
        "@nl_tulipsolutions_tecl//python",
    ],
)
